--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
 
 <!-- Jumbotron -->
-    <div class="container-fluid" >
+    <div>
         <div class="card card-image" style="height: 100vh; background-image: url(https://mdbootstrap.com/img/Photos/Others/forest2.jpg);">
             <div class="container">
                 <div class="text-white text-center rgba-stylish-strong py-5 px-4">
@@ -49,10 +49,22 @@
                 <p class="lead">For more information about Finks Consultants email <a href = "mailto: nicole@finksconsultants.com">nicole@finksconsultants.com</a></p>
 
                 </div>
+
             </div>
-                </div>
         </div>
     </div>
+
+<div class="jumbotron card card-image" style="background-image: url(https://mdbootstrap.com/img/Photos/Others/gradient1.jpg);">
+    <div class="text-white text-center py-5 px-4">
+        <div>
+            <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Create your beautiful website with MDBootstrap</strong></h2>
+            <p class="mx-5 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat fugiat, laboriosam, voluptatem,
+                optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui, dolorum!
+            </p>
+            <a class="btn btn-outline-white btn-md"><i class="fas fa-clone left"></i> View project</a>
+        </div>
+    </div>
+</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
